# fgui

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE.txt  README.asciidoc  README.txt  default.nix
demo/: CMakeLists.txt  fgui_demo.c
font_experiments/: .clang_complete  Makefile  README.font.txt  Untitled.xbm  a_gimp.c  a_gimp.h  a_gimp.xbm  example1.c  font.c  font2xbm.c  freetype-test.py  genfont.py  genfontwrapper.sh  glyph-monochrome.py  xbm2asciiart.py
font_experiments/output/: codepoint_65.xbm  codepoint_97.xbm  font.c  font.h
src/: CMakeLists.txt  fgui.h  fgui_3d.c  fgui_3d.h  fgui_application.c  fgui_application.h  fgui_button.c  fgui_button.h  fgui_combobox.c  fgui_combobox.h  fgui_event.h  fgui_font.c  fgui_font.h  fgui_font_data.h  fgui_input_method.c  fgui_input_method.h  fgui_label.c  fgui_label.h  fgui_lineedit.c  fgui_lineedit.h  fgui_primitives.c  fgui_primitives.h  fgui_types.h  fgui_widget.c  fgui_widget.h  utils.h
src/fonts/: courier.c
tests/: CMakeLists.txt  fgui_test.c  test_3d.c
